<resources>
    <string name="app_name">EuregioFamilyPass</string>
    <string name="title_vantaggi">Vantaggi</string>
    <string name="title_euregio">EuregioFamilyPass Alto Adige</string>
    <string name="title_impostazioni">Impostazioni</string>
    <string name="tab_lista">Lista</string>
    <string name="title_mappa">Mappa</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_search">Ricerca</string>
    <string name="hint_search">ricerca...</string>
    <string name="conferma_button">FATTO</string>
    <string name="reset_button">RESET</string>
    <string name="tutte">Tutte</string>
    <string name="tutti">Tutti</string>
    <string name="categoria">Categoria</string>
    <string name="categorie">Categorie</string>
    <string name="comprensorio">Comprensorio</string>
    <string name="comprensori">Comprensori</string>
    <string name="ordine">Ordine</string>
    <string name="alfabetico">Alfabetico</string>
    <string name="data_aggiornamento">Data di Aggiornamento</string>
    <string name="risultati">Risultati</string>
    <string name="risultato">Risultato</string>
    <string name="avanti">AVANTI</string>
    <string name="numero_carta">Numero Carta</string>
    <string name="codice_fiscale">Codice Fiscale</string>
    <string name="lingua">Lingua</string>
    <string name="pagina_home">Maschera Iniziale</string>
    <string name="pagina_esercenti">Pagina Esercenti</string>
    <string name="pagina_euregio">Pagina Euregio</string>
    <string name="visualizzazione_esercenti">Ordinamento Esercenti</string>
    <string name="lista_alfabetica">Lista alfabetica</string>
    <string name="lista_data">Lista data aggiornamento</string>
    <string name="filtri">Filtri</string>
    <string name="telefono">TELEFONO</string>
    <string name="mail">EMAIL</string>
    <string name="site">SITO</string>
    <string name="indicazioni">INDICAZIONI</string>
    <string name="push">Push Notification</string>
    <string name="esercenti">Esercenti</string>
    <string name="errore_login">Attenzione! Login non andato a buon fine</string>
    <string name="errore_funzione">Attenzione! Funzione non abilitata per questo esercente</string>
    <string name="logout">Logout avvenuto con successo</string>
    <string name="efpalto_adige">EFP Alto Adige</string>
</resources>
