<!-- TODO: Update blank fragment layout -->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/logo_grande"
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:layout_marginTop="56dp"
        app:srcCompat="@drawable/logo_grande" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:layout_gravity="bottom|center_vertical"
        android:layout_marginBottom="76dp"
        android:orientation="vertical"
        android:paddingRight="16dp">

        <LinearLayout
            android:id="@+id/layout_cod_fisc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logo_cod_fisc"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                app:srcCompat="@drawable/logo_card" />

            <EditText
                android:id="@+id/edit_codf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/codice_fiscale"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_num_carta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logo_num_carta"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                app:srcCompat="@drawable/logo_codf" />

            <EditText
                android:id="@+id/edit_cardnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/numero_carta"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_login"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="250dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:elevation="3dp"
                android:text="@string/avanti"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>




