<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">


    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_bottoni_filtri"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/backgroud_border"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/button_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset_button"
                android:textColor="@color/colorPrimary"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/button_conferma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/conferma_button"
                android:textSize="13dp" />

        </LinearLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_fitri_categorie"
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="0.05"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView_filtro"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/categoria"
                            android:textColor="@color/principalText"
                            android:textSize="16dp" />

                        <TextView
                            android:id="@+id/textView_filtro_selezionato"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tutte"
                            android:textColor="@color/greyText"
                            android:textSize="14dp" />

                    </LinearLayout>

                    <View
                        android:id="@+id/view"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="0.01" />

                    <LinearLayout
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:gravity="right"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/icona_expand"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.05"
                            android:clickable="true"
                            android:onClick="imageViewOnClick"
                            app:srcCompat="@drawable/freccia_giu" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/scrollViewCategorie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.05"
                    android:visibility="visible">

                    <RadioGroup
                        android:id="@+id/radioGroup_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>



            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>

</FrameLayout>